<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Assassin!</string>
    <string name="tagline">The game of intrigue and espionage!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="welcome">Assassin!</string>
    <string name="app_id">554910827916749</string>
    <string name="startTraining">Get Started!</string>
    <string name="train">Train</string>
    <string name="title_activity_training">TrainingActivity</string>
    <string name="trainingInstructions">Before you can become a true assassin, you must train. We require at least three pictures of you in order to determine the success of an assassination attempt. Start training now!</string>
    <string name="introInstructions">Assassin! uses face recognition technology to allow you go take pictures of your friends and earn points, but you have to be sneaky! Sign in with Facebook to get started!</string>
    <string name="veteranInstructions">Assassin! the game of intrigue and espionage.</string>
    <string name="showLeaderboard">Leaderboard</string>
    <string name="assassinate">Assassinate!</string>
    <string name="title_activity_attempt">AttemptActivity</string>
    <string name="attemptDescription">An assassination attempt</string>
    <string name="whoIsThis">Who Is This?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="sendAttempt">Assassinate!</string>
    <string name="attemptFailed">Unable to upload attempt. Please try again.</string>
    <string name="home">Home</string>
    <string name="errorTryAgain">An error occurred. Please try again.</string>
    <string name="success">SUCCESS!</string>
    <string name="failure">OH NO!</string>
    <string name="leaderboardHeader">YOUR CUSTOMIZED LEADERBOARD</string>
    <string name="yourPoints">Your Points:</string>

    <style name="ButtonText">
        <item name="android:layout_width">fill_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:textColor">#ffffff</item>
        <item name="android:gravity">center</item>
        <item name="android:layout_margin">3dp</item>
        <item name="android:textSize">30sp</item>
        <item name="android:textStyle">bold</item>
        <item name="android:shadowColor">#000000</item>
        <item name="android:shadowDx">1</item>
        <item name="android:shadowDy">1</item>
        <item name="android:shadowRadius">2</item>
    </style>
    
    <style name="ButtonTextSmall">
        <item name="android:layout_width">fill_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:textColor">#ffffff</item>
        <item name="android:gravity">center</item>
        <item name="android:layout_margin">3dp</item>
        <item name="android:textSize">10sp</item>
        <item name="android:textStyle">bold</item>
        <item name="android:shadowColor">#000000</item>
        <item name="android:shadowDx">1</item>
        <item name="android:shadowDy">1</item>
        <item name="android:shadowRadius">2</item>
    </style>
    
    <style name="Text">
        <item name="android:layout_width">fill_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:textColor">#ffffff</item>
        <item name="android:gravity">center</item>
        <item name="android:layout_margin">3dp</item>
        <item name="android:textSize">15sp</item>
        <item name="android:textStyle">bold</item>
        <item name="android:shadowColor">#000000</item>
        <item name="android:shadowDx">1</item>
        <item name="android:shadowDy">1</item>
        <item name="android:shadowRadius">2</item>
    </style>

    <string name="title_activity_result">ResultActivity</string>
    <string name="title_activity_leaderboard">LeaderboardActivity</string>

</resources>
