<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="fill_vertical"
    android:orientation="vertical"
    tools:context=".AttemptActivity" >

    <ImageView
        android:id="@+id/imageResult"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:layout_weight="0.61"
        android:contentDescription="@string/attemptDescription"
        android:src="@drawable/assassin_launcher" />

    <Button
        android:id="@+id/buttonAlert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/whoIsThis" />
    
    <Button
        android:id="@+id/sendAttempt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/sendAttempt" 
        android:visibility="gone" />

</LinearLayout>