<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:layout_weight="0.61"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logo" />
    
    <TextView
        android:id="@+id/trainingAnnouncement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/trainingAnnouncement" 
        android:visibility="gone" />
    
    <Button
        android:id="@+id/startTraining"
        style="@style/ButtonText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="22dp"
        android:background="@drawable/btn_red"
        android:onClick="startTraining"
        android:text="@string/startTraining"
        android:visibility="gone" />
   
    <Button
        android:id="@+id/assassinate"
        style="@style/ButtonText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="22dp"
        android:background="@drawable/btn_red"
        android:onClick="makeAttempt"
        android:text="@string/assassinate"
        android:visibility="gone" />
        
    <Button
        android:id="@+id/showLeaderboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="22dp"
        android:onClick="showLeaderboard"
        android:text="@string/showLeaderboard"
        android:background="@drawable/btn_red"
        style="@style/ButtonText"
        android:visibility="gone"  />
   
    <com.facebook.widget.LoginButton
        android:id="@+id/authButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp" />

</LinearLayout>
