<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TrainingActivity" >
    
    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="226dp"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/trainingInstructions"
        style="@style/Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal" >

	    <Button
	        android:id="@+id/trainingMenu"
	        style="@style/ButtonTextSmall"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:layout_marginBottom="22dp"
	        android:layout_weight=".5"
	        android:background="@drawable/btn_red"
	        android:onClick="menu"
	        android:text="@string/home" />
	
	    <Button
	        android:id="@+id/train"
	        style="@style/ButtonTextSmall"
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"
	        android:layout_gravity="center_horizontal"
	        android:layout_marginBottom="22dp"
	        android:layout_weight=".5"
	        android:background="@drawable/btn_red"
	        android:onClick="train"
	        android:text="@string/train" />

   	</LinearLayout>
    

</LinearLayout>
